fix searchbar input text wrap; fix tab tooltip delay; tab tooltip refactor

--- a/styles/searchbar.css
+++ b/styles/searchbar.css
@@ -74,6 +74,8 @@ main header {
 }
 
 .searchbar-input {
+	white-space: nowrap;
+
 	flex: 1;
 	font-size: 14px;
 
